--- a/mods/ts/metrics.yaml
+++ b/mods/ts/metrics.yaml
@@ -1,3 +1,8 @@
 # General dumping-ground for UI element sizes, etc.
 Metrics:
 	TextfieldColorHighlight: 1a1a1a
+	FactionSuffix-nod: nod
+	FactionSuffix-gdi: gdi
+	FactionSuffix-test: nod
+
+
