--- a/mods/ts/rules/gdi-infantry.yaml
+++ b/mods/ts/rules/gdi-infantry.yaml
@@ -22,7 +22,7 @@ E2:
 		Weapon: Grenade
 		LocalOffset: 0,0,454
 		FireDelay: 5
-		UseBindage: true
+		UseBlindage: true
 	TakeCover:
 		ProneOffset: 160,128,0 #-555
 	AttackFrontal:
@@ -119,7 +119,7 @@ JUMPJET:
 		Range: 6c0
 	Armament:
 		Weapon: JumpCannon
-		UseBindage: true
+		UseBlindage: true
 	-Crushable:
 	AttackFrontal:
 		Voice: Attack
@@ -247,7 +247,7 @@ GHOST:
 	Armament:
 		Weapon: LtRail
 		LocalOffset: 120,0,313
-		UseBindage: true
+		UseBlindage: true
 	TakeCover:
 		ProneOffset: 256,32,0 #-384
 	Crushable:
