--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -56,11 +56,11 @@ Packages:
 	ts|textures
 	ts|skeletons
 
-	ts|tstest
-	ts|tstest/asset
-	ts|tstest/asset/mat
-	ts|tstest/asset/audios
-	ts|tstest/asset/anims
+	#ts|tstest
+	#ts|tstest/asset
+	#ts|tstest/asset/mat
+	#ts|tstest/asset/audios
+	#ts|tstest/asset/anims
 
 
 
@@ -98,7 +98,7 @@ Rules:
 
 	ts|3dtest/testrulse.yaml
 
-	ts|tstest/localtestrulse.yaml
+	#ts|tstest/localtestrulse.yaml
 
 Weapons:
 	ts|weapons/ballisticweapons.yaml
@@ -111,7 +111,7 @@ Weapons:
 	ts|weapons/superweapons.yaml
 	ts|3dtest/weapons.yaml
 	
-	ts|tstest/localtestweapon.yaml
+	#ts|tstest/localtestweapon.yaml
 
 
 Sequences:
@@ -125,7 +125,7 @@ Sequences:
 	ts|sequences/bridges.yaml
 	ts|sequences/critters.yaml
 
-	ts|tstest/localtestseq.yaml
+	#ts|tstest/localtestseq.yaml
 
 ModelSequences:
 	ts|sequences/voxels.yaml
@@ -133,7 +133,7 @@ ModelSequences:
 MeshSequences:
 	ts|3dtest/meshes.yaml
 
-	ts|tstest/localtestmes.yaml
+	#ts|tstest/localtestmes.yaml
 
 TileSets:
 	ts|tilesets/temperate.yaml
@@ -218,7 +218,7 @@ Translations:
 Voices:
 	ts|audio/voices.yaml
 
-	ts|tstest/localtestvoices.yaml
+	#ts|tstest/localtestvoices.yaml
 
 
 Notifications:
