--- a/mods/ts/rules/palettes.yaml
+++ b/mods/ts/rules/palettes.yaml
@@ -179,6 +179,11 @@
 		BaseName: cloak
 		BasePalette: player
 		Alpha: 0.55
+	ColorAlphaFlashPaletteEffect:
+		AffectedPalette: cloak
+		IsAffectedPalettePlayerColor: true
+		EndIndex: 32
+		Alpha: 1.4, 1.35, 1.3, 1.25, 1.2, 1.15, 1.1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4
 	PaletteFromPaletteWithAlpha@terrainalpha:
 		BasePalette: terraindecoration
 		Name: terrainalpha
