添加issly模型的mix文件和新的女妖战机模型 Signed-off-by: baikenuer <knewxy@foxmail.com>

--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -47,6 +47,8 @@ Packages:
 	~e01vox01.mix
 	~e01vox02.mix
 	~ecache01.mix
+	# Issly's Voxel
+	~isslyvox01.mix
 	ts|bits
 	ts|bits/audios
 	ts|bits/vxls
