--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -21,9 +21,16 @@
 ^WithIsslyVoxRender:
 	RenderModels:
 		Scale: 0.14
-		LightScale: 0.25
-		SpecularScale: 0.2
+		LightScale: 0.28
+		SpecularScale: 0.4
 		AmbientScale: 1		
+
+^WithRA2VoxRender:
+	RenderModels:
+		Scale: 0.11
+		LightScale: 0.3
+		SpecularScale: 0.45
+		AmbientScale: 1				
 
 ^SpriteActor:
 	BodyOrientation:
