--- a/mods/ts/rules/palettes.yaml
+++ b/mods/ts/rules/palettes.yaml
@@ -138,8 +138,13 @@
 		G: 255
 		B: 255
 		A: 64
-	TSShroudPalette@shroud:
+	ShroudPalette@shroud:
 		Name: shroud
+	ShroudPalette@fog:
+		Name: fog
+		Fog: true
+	# TSShroudPalette@shroud:
+	# 	Name: shroud
 	VoxelNormalsPalette@normals:
 		Name: normals
 		Type: RedAlert2
